Fix long words overflowing horizontally

--- a/Randominator/wwwroot/css/app.scss
+++ b/Randominator/wwwroot/css/app.scss
@@ -17,6 +17,7 @@ a, .btn-link {
 .page {
     color: var(--text-color);
     min-height: 100vh;
+    word-wrap: break-word;
 }
 
 main {
